Add unit test project and test coverage
Introduced CodeContext.Tests project with xUnit-based tests for core services and utilities, including FileFilterService, GitHelper, Guard, PathResolver, and StatsCalculator. Updated solution and main project to exclude test files from compilation and resources.

--- a/CodeContext.csproj
+++ b/CodeContext.csproj
@@ -8,4 +8,9 @@
   <ItemGroup>
     <PackageReference Include="DotNet.Glob" Version="3.1.3" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="CodeContext.Tests\**" />
+    <EmbeddedResource Remove="CodeContext.Tests\**" />
+    <None Remove="CodeContext.Tests\**" />
+  </ItemGroup>
 </Project>
